# hf-save-on-storage

./: README.md  manifest.json  pyproject.toml
src/hf_save_on_storage/: __init__.py  __main__.py  cli.py  migrator.py  pricing.py  s3_analyzer.py
tests/: test_cli_mock.py  test_pricing.py
